if(MSVC)
    add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
endif()

add_subdirectory(dmx_tx)
add_subdirectory(dmx_rx)
add_subdirectory(timecode_tx)
add_subdirectory(timecode_rx)
add_subdirectory(target_node)
add_subdirectory(node_manager)
add_subdirectory(rdm_controller)
add_subdirectory(timesync_tx)
add_subdirectory(diag_monitor)
add_subdirectory(file_transfer)
add_subdirectory(directory_query)
add_subdirectory(full_node)
add_subdirectory(full_controller)
